# n8n-job-scrapper

./: .env.example  Makefile  README.md  docker-compose.yml  job search workflow.json  requirements.txt  start.bat
scraper-service/: .env  main.py  scrapper.py
services/scraper/: .dockerignore  .env.example  Dockerfile  pyproject.toml  scrapper.py
services/scraper/app/: __init__.py  config.py  main.py  schemas.py  scraper.py
services/scraper/tests/: test_api.py
workflows/: job-search-workflow.json
